feat: add route search user by email
